--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -1,194 +1,211 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/background"
-    android:orientation="vertical"
-    tools:context=".QuizActivity">
+    android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/quizHead"
+        android:id="@+id/loadingText"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/afacad_bold"
-        android:text="QuizzBuzz"
+        android:layout_height="match_parent"
+        android:fontFamily="@font/afacad_medium"
+        android:gravity="center"
+        android:text="Loading questions..."
         android:textColor="@color/text_dark"
-        android:textSize="30sp"
-        android:paddingTop="10dp"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"/>
-
-    <View
-        android:id="@+id/divider"
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:backgroundTint="@color/black"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
-        android:background="?android:attr/listDivider" />
+        android:textSize="24sp"
+        android:background="@color/background"
+        android:visibility="visible" />
 
     <LinearLayout
+        android:id="@+id/main"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:paddingTop="15dp"
-        android:paddingBottom="15dp"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp">
-
-        <TextView
-            android:id="@+id/categoryDifficulty"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:textColor="@color/text_dark"
-            android:fontFamily="@font/afacad_medium"
-            android:text="Category | difficulty"
-            android:textSize="24sp" />
-
-        <TextView
-            android:id="@+id/currentQuestion"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/text_dark"
-            android:text="1"
-            android:textSize="34sp"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/totalQuestion"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/text_dark"
-            android:fontFamily="@font/afacad_medium"
-            android:text="/10"
-            android:textSize="24sp" />
-
-    </LinearLayout>
-
-    <ProgressBar
-        android:id="@+id/progressBar"
-        style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="match_parent"
-        android:layout_height="6dp"
-        android:layout_margin="10dp"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
-        android:max="10"
-        android:progress="0"
-        android:progressDrawable="@drawable/progress_bg" />
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/rounded_bg"
-        android:backgroundTint="#FFEFF3"
+        android:layout_height="match_parent"
+        android:background="@color/background"
         android:orientation="vertical"
-        android:padding="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp">
+        tools:context=".QuizActivity">
 
-        <androidx.cardview.widget.CardView
+        <TextView
+            android:id="@+id/quizHead"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:backgroundTint="@color/background"
-            app:cardCornerRadius="10dp"
-            app:cardElevation="1dp"
-            app:cardPreventCornerOverlap="true"
-            app:cardUseCompatPadding="true"
-            app:contentPadding="10dp">
+            android:fontFamily="@font/afacad_bold"
+            android:paddingLeft="20dp"
+            android:paddingTop="10dp"
+            android:paddingRight="20dp"
+            android:text="QuizzBuzz"
+            android:textColor="@color/text_dark"
+            android:textSize="30sp" />
 
-            <TextView
-                android:id="@+id/question"
-                android:layout_width="match_parent"
-                android:layout_height="100dp"
-                android:layout_weight="1"
-                android:fontFamily="@font/afacad_medium"
-                android:gravity="center"
-                android:padding="5dp"
-                android:text=""
-                android:textColor="@color/text_dark"
-                android:textSize="20sp" />
-        </androidx.cardview.widget.CardView>
+        <View
+            android:id="@+id/divider"
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            android:background="?android:attr/listDivider"
+            android:backgroundTint="@color/black" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:paddingLeft="20dp"
+            android:paddingTop="15dp"
+            android:paddingRight="20dp"
+            android:paddingBottom="15dp">
 
-            <RadioGroup
-                android:id="@+id/optionsGrp"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="40dp">
+            <TextView
+                android:id="@+id/categoryDifficulty"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:fontFamily="@font/afacad_medium"
+                android:text="Category | difficulty"
+                android:textColor="@color/text_dark"
+                android:textSize="24sp" />
 
-                <RadioButton
-                    android:id="@+id/option1"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginVertical="6dp"
-                    android:background="@drawable/option_bg"
-                    android:buttonTint="@color/accent"
-                    android:buttonTintMode="multiply"
-                    android:padding="12dp"
-                    android:textColor="@color/text_dark"
-                    android:textSize="20sp" />
+            <TextView
+                android:id="@+id/currentQuestion"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="1"
+                android:textColor="@color/text_dark"
+                android:textSize="34sp"
+                android:textStyle="bold" />
 
-                <RadioButton
-                    android:id="@+id/option2"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginVertical="6dp"
-                    android:background="@drawable/option_bg"
-                    android:buttonTint="@color/accent"
-                    android:buttonTintMode="multiply"
-                    android:padding="12dp"
-                    android:textColor="@color/text_dark"
-                    android:textSize="20sp" />
+            <TextView
+                android:id="@+id/totalQuestion"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/afacad_medium"
+                android:text="/10"
+                android:textColor="@color/text_dark"
+                android:textSize="24sp" />
 
-                <RadioButton
-                    android:id="@+id/option3"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginVertical="6dp"
-                    android:background="@drawable/option_bg"
-                    android:buttonTint="@color/accent"
-                    android:buttonTintMode="multiply"
-                    android:padding="12dp"
-                    android:textColor="@color/text_dark"
-                    android:textSize="20sp" />
-
-                <RadioButton
-                    android:id="@+id/option4"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginVertical="6dp"
-                    android:background="@drawable/option_bg"
-                    android:buttonTint="@color/accent"
-                    android:buttonTintMode="multiply"
-                    android:padding="12dp"
-                    android:textColor="@color/text_dark"
-                    android:textSize="20sp" />
-
-            </RadioGroup>
         </LinearLayout>
 
-        <Button
-            android:id="@+id/playAgainBtn"
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="match_parent"
+            android:layout_height="6dp"
+            android:layout_margin="10dp"
+            android:max="10"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:progress="0"
+            android:progressDrawable="@drawable/progress_bg" />
+
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:backgroundTint="@color/accent"
-            android:textColor="@color/text_light"
-            android:text="Next"
-            android:gravity="center"
-            android:textSize="26sp"
-            android:textStyle="bold" />
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="20dp"
+            android:background="@drawable/rounded_bg"
+            android:backgroundTint="#FFEFF3"
+            android:orientation="vertical"
+            android:padding="10dp">
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:backgroundTint="@color/background"
+                app:cardCornerRadius="10dp"
+                app:cardElevation="1dp"
+                app:cardPreventCornerOverlap="true"
+                app:cardUseCompatPadding="true"
+                app:contentPadding="10dp">
+
+                <TextView
+                    android:id="@+id/question"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/afacad_medium"
+                    android:gravity="start"
+                    android:padding="10dp"
+                    android:textColor="@color/text_dark"
+                    android:textSize="20sp" />
+
+            </androidx.cardview.widget.CardView>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <RadioGroup
+                    android:id="@+id/optionsGrp"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="40dp">
+
+                    <RadioButton
+                        android:id="@+id/option1"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginVertical="6dp"
+                        android:background="@drawable/option_bg"
+                        android:buttonTint="@color/accent"
+                        android:buttonTintMode="multiply"
+                        android:padding="12dp"
+                        android:textColor="@color/text_dark"
+                        android:textSize="20sp" />
+
+                    <RadioButton
+                        android:id="@+id/option2"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginVertical="6dp"
+                        android:background="@drawable/option_bg"
+                        android:buttonTint="@color/accent"
+                        android:buttonTintMode="multiply"
+                        android:padding="12dp"
+                        android:textColor="@color/text_dark"
+                        android:textSize="20sp" />
+
+                    <RadioButton
+                        android:id="@+id/option3"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginVertical="6dp"
+                        android:background="@drawable/option_bg"
+                        android:buttonTint="@color/accent"
+                        android:buttonTintMode="multiply"
+                        android:padding="12dp"
+                        android:textColor="@color/text_dark"
+                        android:textSize="20sp" />
+
+                    <RadioButton
+                        android:id="@+id/option4"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginVertical="6dp"
+                        android:background="@drawable/option_bg"
+                        android:buttonTint="@color/accent"
+                        android:buttonTintMode="multiply"
+                        android:padding="12dp"
+                        android:textColor="@color/text_dark"
+                        android:textSize="20sp" />
+
+                </RadioGroup>
+            </LinearLayout>
+
+            <Button
+                android:id="@+id/nextBtn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/accent"
+                android:gravity="center"
+                android:text="Next"
+                android:textColor="@color/text_light"
+                android:textSize="26sp"
+                android:textStyle="bold" />
+        </LinearLayout>
     </LinearLayout>
 
-</LinearLayout>
+</FrameLayout>
